books/services.yml
apiVersion: v1
kind: Service
metadata:
  name:  kaizoku
  namespace: default
  labels:
    app.kubernetes.io/name: kaizoku
spec:
  selector:
    app.kubernetes.io/name: kaizoku
  type:  ClusterIP
  ports:
  - name:  http
    port:  3000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name:  postgres
  namespace: default
  labels:
    app.kubernetes.io/name: postgres
spec:
  selector:
    app.kubernetes.io/name: postgres
  type:  ClusterIP
  ports:
  - name:  db
    port:  5432
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name:  redis
  namespace: default
  labels:
    app.kubernetes.io/name: redis
spec:
  selector:
    app.kubernetes.io/name: redis
  type:  ClusterIP
  ports:
  - name:  redis
    port:  6379
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name:  kavita
  namespace: default
  labels:
    app.kubernetes.io/name: kavita
spec:
  selector:
    app.kubernetes.io/name: kavita
  type:  ClusterIP
  ports:
  - name:  http
    port:  5000
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name:  calibre
  namespace: default
  labels:
    app.kubernetes.io/name: calibre
spec:
  selector:
    app.kubernetes.io/name: calibre
  type:  ClusterIP
  ports:
  - name:  http
    port:  8080
    protocol: TCP
  - name:  api
    port:  8081
    protocol: TCP
