books/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kaizoku
  namespace: default
spec:
  rules:
  - host: "manga.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kaizoku 
            port:
              number: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kavita
  namespace: default
spec:
  rules:
  - host: "library.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kavita 
            port:
              number: 5000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calibre
  namespace: default
spec:
  rules:
  - host: "librarian.nikic.org"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: calibre 
            port:
              number: 8080
